--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Login</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed rerum dicta, magnam reprehenderit sequi tenetur voluptatum, doloribus architecto eveniet id cumque officiis nostrum suscipit consequuntur tempore assumenda accusantium velit ipsa!</p>
 </body>
 </html>
